:tada: initial commit

--- a/web/src/app/home/listagem-conteudo/listagem-conteudo.component.html
+++ b/web/src/app/home/listagem-conteudo/listagem-conteudo.component.html
@@ -27,6 +27,6 @@
 
 
 <div class="carrosel-filmes pb-20">
-  <p class="text-4xl pl-2 my-4">Lançamentos</p>
-  <app-carousel-content></app-carousel-content>
+  <p class="text-4xl pl-2 md:my-4 my-8">Lançamentos</p>
+  <app-carousel-content [content]="films"></app-carousel-content>
 </div>
