--- a/web/src/app/film/listagem-conteudo/listagem-conteudo.component.html
+++ b/web/src/app/film/listagem-conteudo/listagem-conteudo.component.html
@@ -1,11 +1,9 @@
-<main>
+<main class="mt-16 md:mt-0">
   <div class="filme-principal" [ngStyle]="{ background: 'linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%), url(' + featuredfilm.image + ')'}">
     <div class="container">
       <h3 class="titulo">{{featuredfilm.name}}</h3>
-      <p class="descricao">Comédia | Família | Animação | <i class="far fa-clock"></i>1h23m</p>
-      <p class="descricao">Um gato de rua chamado Tom é contratado por uma garota chamada Kayla, uma jovem empregada que
-        trabalha em um hotel glamouroso em Nova York, para se livrar de Jerry, um rato travesso que se mudou para o
-        hotel, antes que ele seja a ruína de um importante casamento.</p>
+      <p class="descricao"> {{featuredfilm.categoriesString}}
+      <p class="descricao">{{featuredfilm.description}}</p>
       <div class="botoes">
         <a href="https://www.youtube.com/watch?v=Jg-ls07nixc">
           <button role="button" class="botao">
