--- a/web/src/app/shared/components/navbar/navbar.component.html
+++ b/web/src/app/shared/components/navbar/navbar.component.html
@@ -6,6 +6,11 @@
           <img class="block lg:hidden h-9 w-auto" src="./assets/logo.png" alt="Workflow">
           <img class="hidden lg:block h-9 w-auto" src="./assets/logo.png" alt="Workflow">
         </a>
+        <div *ngIf="isLogged && isAdmin">
+          <a [routerLink]="['/admin/content']" class="inline-flex items-center px-3 py-1 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500">
+            Gerenciar Conteúdo
+          </a>
+        </div>
       </div>
       <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
         <div class="ml-3 relative">
