--- a/web/src/app/film/visualizar-conteudo/visualizar-conteudo.component.html
+++ b/web/src/app/film/visualizar-conteudo/visualizar-conteudo.component.html
@@ -1,4 +1,4 @@
-<div class=" w-screen h-screen xs:p-2">
+<div class=" w-screen h-screen xs:p-2 flex justify-center items-center">
   <youtube-player [height]="height" [width]="width"  [videoId]="film.video"></youtube-player>
 </div>
 
