--- a/web/src/app/shared/components/navbar/navbar.component.html
+++ b/web/src/app/shared/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav id="navbar" class="bg-transparent fixed top-0 left-0 rigth-0 w-full z-50">
+<nav *ngIf="showNavbar" id="navbar" class="bg-transparent fixed top-0 left-0 rigth-0 w-full z-50">
   <div class="mx-auto px-2 sm:px-6 lg:px-8">
     <div class="relative flex items-center justify-between h-16">
       <div class="flex-1 flex items-center justify-between">
