--- a/web/src/app/shared/components/carousel-content/carousel-content.component.html
+++ b/web/src/app/shared/components/carousel-content/carousel-content.component.html
@@ -1,7 +1,11 @@
 <owl-carousel-o [options]="customOptions" >
   <ng-container *ngFor="let content of content">
       <ng-template carouselSlide [id]="content.id">
-        <img (click)="goToFilm(content)" class="cursor-pointer object-cover px-2 shadow-md" [src]="content.image" [alt]="content.name" [title]="content.name">
+        <div class="relative">
+          <img (click)="goToFilm(content)" class="cursor-pointer object-cover px-2 shadow-md" [src]="content.image" [alt]="content.name" [title]="content.name">
+        <div *ngIf="content && content.avaliation" class="absolute top-0 right-5" [innerHTML]="getStars(content.avaliation)">
+        </div>
+        </div>
       </ng-template>
   </ng-container>
 </owl-carousel-o>
